# sfrotate

./: .gitmodules  CMakeLists.txt  README.md  frida.sh  inject.sh  rotate.js
.devcontainer/: Dockerfile  devcontainer.json
frida/: offsets.js  rotate.js
sfrotate/: dlopen64
src/: dlopen64.cpp  gnu_debugdata_resolver.cpp  gnu_debugdata_resolver.h  log.h  sf_rotate.cpp  sf_rotate.hpp
